# macos-compose

./: README.md  convcompose.py  gencompose.py  pyproject.toml  toXcompose.py
mappings/: README.md  common.yaml  emoji.yaml  lithuanian.yaml  readme.yaml  xcompose.yaml
tests/: test.compose  test_convcompose.py
